footer spacing fix

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -14,15 +14,9 @@
 .first {
     color: white;
     font-size: 28px;
-    
 }
 
 .third {
     color: white;
     font-size: 28px;
-}
-
-.logoRyan {
-    height: 100px;
-    width: 133px;
 }
