--- a/src/components/Top/style.css
+++ b/src/components/Top/style.css
@@ -15,3 +15,8 @@ body {
 .currentScore {
     color: white;
 }
+
+.logoRyan {
+    height: 100px;
+    width: 133px;
+}
